--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "./node_modules/.bin/babel-node src/index.js ",
     "test:noop": "echo 'test ignored'",
-    "test": "cross-env BABEL_ENV=test mocha --compilers js:babel-core/register --recursive",
+    "test": "cross-env BABEL_ENV=test mocha --timeout 1.8e+6 --require co-mocha --require babel-polyfill --compilers js:babel-core/register --recursive",
     "test:with-coverage": "npm run clean:coverage && cross-env BABEL_ENV=test nyc --reporter=lcov mocha --compilers js:babel-core/register --recursive",
     "test:check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "test:publish-coverage": "codecov",
@@ -47,6 +47,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "chai": "^3.5.0",
+    "co-mocha": "^1.1.3",
     "codecov": "^1.0.1",
     "commitizen": "^2.8.2",
     "cross-env": "^1.0.8",
@@ -57,7 +58,7 @@
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
     "ghooks": "^1.2.4",
-    "mocha": "^2.5.1",
+    "mocha": "^2.5.3",
     "npm-run-all": "^2.1.2",
     "nyc": "^6.4.4",
     "rimraf": "^2.5.2",
