--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "dependencies": {
     "bluebird": "^3.4.1",
+    "browserevent": "^0.2.0",
     "co": "^4.6.0",
     "co-vorpal": "^1.0.0",
     "commander": "^2.9.0",
